Hacks to ensure the app doesn't stretch beyond viewport.
Hopefully, we're finally done with this stuff. It's infuriating.

--- a/src/assets/stylus/main.styl
+++ b/src/assets/stylus/main.styl
@@ -1,5 +1,7 @@
-html
-  overflow: hidden
+html, body, .application
+  width 100vw
+  height 100vh
+  overflow hidden
 
 .v-toolbar
   &__content
